# scrumgitlab-Habr_Nikita_Nezgovorov

./: README.md  config.py  main.py  news_dict.json  requirements.txt  tg_bot.py
habr/: .env.dev  Dockerfile  docker-compose.yml  pyproject.toml
habr/habr_project/: db.sqlite3  manage.py
habr/habr_project/habr_project/: asgi.py  settings.py  urls.py  wsgi.py
habr/habr_project/mainapp/: admin.py  forms.py  models.py  urls.py  views.py
habr/habr_project/mainapp/migrations/: 0001_initial.py  0002_alter_article_options_alter_articlecategory_options_and_more.py
habr/habr_project/mainapp/templates/mainapp/: article_confirm_delete.html  article_detail.html  article_update.html  base.html  index.html
habr/habr_project/mainapp/templates/mainapp/includes/: Inc_article.html  inc_article_on_the_page.html  inc_article_single.html  inc_header_menu.html  inc_search_field.html
habr/habr_project/static/: main.css
habr/tests/: test_habr.py
